--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
 	<title>tweet-a-car</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/car.css">
+	<link rel="stylesheet" type="text/css" href="css/carstyle.css">
 </head>
 <body>
 	<div class="car">
-		<div class="roof"></div>
+		
 		<div class="windowpane">
 			<div class="windshield"></div>
 		</div>
-		<div class="trunk"></div>
+		<div class="trunk-bottom"></div>
+		<div class="trunk-side"></div>
+		<div class="roof"></div>
 		<div class="hood"></div>
+
+		<div class="wheel-shadow fr"></div>
+		<div class="wheel-shadow rr"></div>
+
 		<div class="sidepanel"></div>
-		<div class="door">
-			<div class="sidewindow"></div>
+		<div class="door-skew">
+			<div class="sidewindow-skew"></div>
+		</div>
+		<div class="door-square">
+			<div class="sidewindow-square"></div>
 		</div>
 		<div class="front">
 			<div class="light"></div>
 			<div class="light"></div>
 		</div>
-		<div class="wheel">
+		<div class="wheel fr">
 			<div class="rim"></div>
 		</div>
-		<div class="wheel">
+		<div class="wheel rr">
 			<div class="rim"></div>
 		</div>
 		</div>
